@@ -1,11 +1,8 @@
--Xms16384m
--Xmx32768m 
--XX:ReservedCodeCacheSize=128m
--XX:+UseConcMarkSweepGC
--XX:SoftRefLRUPolicyMSPerMB=50
--ea
--Dsun.io.useCanonCaches=false
--Djava.net.preferIPv4Stack=true
--Djdk.http.auth.tunneling.disabledSchemes=""
+-Xms4g
+-Xmx32g
+-XX:+UseG1GC
+-XX:+TieredCompilation
+-XX:ReservedCodeCacheSize=512m
+-Didea.filewatcher.executable.interval=10000
 -XX:+HeapDumpOnOutOfMemoryError
 -XX:-OmitStackTraceInFastThrow
